--- a/.startpage-firefox/src/index.html
+++ b/.startpage-firefox/src/index.html
@@ -37,12 +37,8 @@
     Mappings: <br>
     ctrl + alt + g -> Google <br>
     ctrl + alt + l -> Google Calendar <br>
-    ctrl + alt + c -> Computer Systems <br>
-    ctrl + alt + a -> Linear Algebra <br>
-    ctrl + alt + n -> Number Theory <br>
-    ctrl + alt + s -> CS Research Seminar <br>
-    ctrl + alt + p -> Security & Privacy 
-
+    ctrl + alt + a -> advanced algorithms <br>
+    ctrl + alt + f -> formal verification 
   </div>
 
 
