--- a/.startpage-firefox/index.html
+++ b/.startpage-firefox/index.html
@@ -33,6 +33,7 @@
               <ul>
                 <li><a href="https://gmail.com">Gmail</a></li>
                 <li><a href="https://calendar.google.com">Calendar</a></li>
+                <li><a href="https://mangadex.org/titles/feed">Mangadex</a></li>
                 <li><a href="https://jakegines.in">jakegines.in</a></li>
               </ul>
             </div>
@@ -41,7 +42,7 @@
               <h2>Uni</h2>
               <ul>
                 <li><a href="https://www.husker.nu/">Husker</a></li>
-                <li><a href="https://https://northeastern.instructure.com/">Canvas</a></li>
+                <li><a href="https://northeastern.instructure.com/">Canvas</a></li>
                 <li><a href="https://student.me.northeastern.edu/">Hub</a></li>
               </ul>
             </div>
@@ -50,7 +51,7 @@
               <h2>Code</h2>
               <ul>
                 <li><a href="https://github.com">Github</a></li>
-                <li><a href="https://github.com">lobste.rs</a></li>
+                <li><a href="https://lobste.rs/">lobste.rs</a></li>
                 <li><a href="https://news.ycombinator.com/">Hackernews</a></li>
                 <li><a href="https://codeforces.com/problemset">Codeforces</a></li>
               </ul>
